--- a/src/components/SideNavigation/SideNavigation.css
+++ b/src/components/SideNavigation/SideNavigation.css
@@ -3,9 +3,9 @@
 }
 
 .Main-Container.One {
-  margin: 0 0 0 4em;
   padding: 4em 0;
   font-family: "Bebas Neue", cursive;
+  margin: 0 auto;
 }
 
 .Main-Container.One img {
