--- a/src/components/MainContent/Feedback/FeedbackForm.css
+++ b/src/components/MainContent/Feedback/FeedbackForm.css
@@ -1,54 +1,15 @@
-form {
-  font-family: "Bebas Neue", cursive;
-  padding: 2em;
-  border: 5px solid var(--yellow-pantone);
-  border-radius: 10px;
-  background-color: var(--flame);
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: 50px;
-  gap: 2em;
-  align-items: center;
+.User-input{
+    display: flex;
+    flex-direction: column;
+    padding: 0.3em;;
 }
 
-form label {
-  font-size: 2rem;
+label{
+    font-size: 1.2em;
 }
 
-input {
-  border-radius: 10px;
-}
-input,
-textarea {
-  padding: 0.4rem;
-  font-size: 1.1rem;
-}
-
-input:focus,
-textarea:focus {
-  outline: 2px solid var(--yellow-pantone);
-}
-
-textarea {
-  grid-column: 1/3;
-}
-
-input[type="submit"],
-input[type="reset"] {
-  width: auto;
-}
-
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="submit"]:focus,
-input[type="reset"]:focus {
-  background-color: var(--yellow-pantone);
-}
-input[type="file"] {
-  color: transparent;
-}
-
-#buttons {
-  grid-column: 2/3;
-  text-align: center;
+input[type="text"]{
+    width: 50em;
+    height: 3em;
+    border-radius: 0.3em;
 }
